# cursor-hello-llm-agent

./: .cursorindexingignore  .gitignore  CLAUDE.md  GRAPH_MANAGER_STANDALONE_ARCHITECTURE.md  PERFORMANCE_TRACKING_IMPLEMENTATION.md  README-background-graph-processing-system.md  README-phase-2.md  README-phase-3.md  README-phase-4.md  README-phase-5.md  README-phase-6-implementation-plan.md  README-phase-6-status-week-1.md  README-phase-6-status-week-2.md  README-phase-6-status-week-3-graph-background-optimization.md  README-phase-6-status-week-3-optimization.md  README-phase-6.md  README.md  Updating README.md Architecture Overview.md  agent_cli.py  agent_usage_example-successful-output.md  conftest.py  graph_manager_process.py  launcher.py  memory_compression_test  memory_compression_test_bak_20250504_182945  memory_compression_test_conversations.json  poem_cli.py  populate_queue_from_conversations.py  pyproject.toml  quick_agent_test.py  requirements-api.txt  requirements.txt  run_automated_tests.py  test_background_graph_processing.py  test_embedding_search_debug.py  test_entity_fix.py  test_entity_resolver_integration.py  test_fixed_embeddings.py  test_full_pipeline_duplicate_detection.py  test_graph_contents.py  (+6 more)
.claude/: settings.local.json
agent-web-ui/: README-agent-web-ui-implmentation-plan.md  README-timeout-and-verbose-improvements.md  README.md  component-library-options.md  package-lock.json  package.json  vite.config.ts
claude-code-notes/: phase-4-june-01-2025-1-expanded.md  phase-4-june-01-2025-1.md  phase-4-june-01-2025-2.md  phase-4-june-01-2025-3.md  (+26 more)
(+359 files in other folders)
